<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/correct_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_correctAnswerHeader" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/youranswer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_yourAnswerHeader" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp" android:textStyle="bold"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txt_correctAnswer"/>
    <TextView
            android:text="@string/placeholder_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_correctAnswer" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_correctAnswerHeader"/>
    <TextView
            android:text="@string/placeholder_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_yourAnswer" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_yourAnswerHeader"/>
    <TextView
            android:text="@string/placeholder_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_results"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_yourAnswer"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:gravity="center" android:textSize="18sp"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.5"/>
    <Button
            android:text="@string/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_results" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"/>
</android.support.constraint.ConstraintLayout>