<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/placeholder_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_topic" android:textSize="18sp"
            android:textStyle="bold" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/placeholder_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_topicOverview" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_topic" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/btn_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_begin" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_numquestions" android:layout_marginTop="32dp"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3" app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/placeholder_numquestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_numquestions" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_topicOverview" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
</android.support.constraint.ConstraintLayout>