<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/question_container">

    <TextView
            android:text="@string/placeholder_questionheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_questionHeader" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/placeholder_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_question" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_questionHeader" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_question" android:layout_marginTop="16dp"
            android:orientation="vertical" android:id="@+id/rad_options" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp">
        <RadioButton
                android:text="@string/placeholder_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rad_option1" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/placeholder_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rad_option2" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/placeholder_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rad_option3" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/placeholder_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rad_option4" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rad_options" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>